[package]
name = "lego"
version = "0.1.0"
authors = ["shonenada <shonenada@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4"
pretty_env_logger = "0.3"
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
wasmer-as = { git = "https://github.com/onsails/wasmer-as" }
wasmer-runtime = "0.14.0"
wasmer-wasi = "0.14.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
